2/24/14 start fleshing out SubSupText with options and setters/getters
2/24/14 clicking on faucet shooter cancels any tap-to-dispense that may be in progress, scenery-phet#31
2/24/14 #4, limit precision of pH in model so that consistent values are presented to user
2/24/14 #3 investigate why interactive graph indicators are failing on iPad, traced to scenery.HTMLText, abandoned there
2/24/14 prevent needless creation of an additional custom solute in the case where the pH is unchanged
2/20/14 fix problem with timers in tap-to-dispense feature of FaucetNode, phetsims/phet-scale#1, phetsims/scenery-phet#31
# 1.0.0-dev.13 2/15/14
2/15/14 add interactive arrows to graph indicators
2/15/14 delete handle and shadow from interactive graph indicators, in preparation for adding arrows
2/15/14 changes options interface for tap-to-dispense feature in FaucetNode
2/12/14 revised 'Custom' screen icon, .ai file for all screen icons
# 1.0.0-dev.12 2/12/14
2/12/14 change tap-to-dispense parameters: flowRate=0.15, interval=333
2/12/14 lighten color of pH probe from RGB(80,80,80) to RGB(140,140,140)
2/12/14 new screen names: Basics -> Macro, Solutions -> Micro
2/12/14 new icon for 'Custom' screen
# 1.0.0-dev.11 2/12/14
2/12/14 add tap-to-dispense feature to faucets, dispense 0.01L in 0.5 sec
2/11/14 temporarily hide the 'ratio' feature if we're not running in dev mode, so it doesn't interfere with interviews
# 1.0.0-dev.10 2/10/14
2/10/14 offset the H2O indicator when off scale, so it doesn't butt up again OH indicator
2/10/14 shorten line between expand/collapse box and graph scale, remove masking hack from linear graph
2/10/14 reduce height of linear scale a bit, so that zoom buttons aren't crowded by graph indicators, may make them more inviting
2/10/14 restore original height of log scale in 'Solutions' so that indicators don't overlap scale switch when beaker is empty
2/10/14 increase height of arrow head on linear graph